# hal-contract-spec

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md
examples/rust-mock/: Cargo.toml
examples/rust-mock/src/: main.rs
haskell/: hal-contract.cabal
haskell/src/HAL/Contract/: Backend.hs
python/: pyproject.toml
python/hal_contract/: __init__.py  backend.py
rust/: Cargo.toml
rust/src/: backend.rs  capability.rs  error.rs  job.rs  lib.rs  result.rs
spec/: v2.md
