cabal-version:   3.0
name:            hal-contract
version:         0.1.0.0
synopsis:        HAL Contract — Orchestration Interface Specification for Quantum-HPC Workflows
description:
  Haskell reference implementation of the HAL Contract v2 specification.
  Provides type classes and data types for quantum backend orchestration.
license:         Apache-2.0
license-file:    ../LICENSE
author:          Daniel Hinderink
maintainer:      daniel@arvak.io
homepage:        https://hal-contract.org
bug-reports:     https://github.com/hiq-lab/hal-contract-spec/issues
category:        Quantum
build-type:      Simple

library
  exposed-modules: HAL.Contract.Backend
  hs-source-dirs:  src
  default-language: Haskell2010
  build-depends:
    , base        >= 4.14 && < 5
    , aeson       >= 2.0  && < 2.3
    , text        >= 1.2  && < 2.2
    , containers  >= 0.6  && < 0.8
