[package]
name = "hal-contract"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/hiq-lab/hal-contract-spec"
description = "HAL Contract — Orchestration Interface Specification for Quantum-HPC Workflows"
keywords = ["quantum", "backend", "hardware", "abstraction", "hal"]
categories = ["science", "hardware-support"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }
rustc-hash = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
